--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-personal-portfolio",
   "version": "0.1.0",
+  "homepage": "https://bhanuprakaash.github.io/reactPortfolio",
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.4.3",
@@ -23,6 +24,8 @@
     "yup": "^0.32.11"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -45,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
