--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-personal-portfolio",
   "version": "0.1.0",
-  "homepage": "https://bhanuprakaash.github.io/reactPortfolio",
+  "homepage": "https://bhanuprakaash.github.io/react-personal-portfolio",
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.4.3",
