--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-personal-portfolio",
   "version": "0.1.0",
-  "homepage": "https://github.com/bhanuprakaash/react-personal-portfolio.git",
+  "homepage": "https://github.com/bhanuprakaash/react-personal-portfolio.git/public/index.html",
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.4.3",
