--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-personal-portfolio",
   "version": "0.1.0",
-  "homepage": "https://bhanuprakaash/react-personal-portfolio",
+  "homepage": "https://bhanuprakaash.github.io/react-personal-portfolio",
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.4.3",
@@ -21,11 +21,12 @@
     "react-fontawesome": "^1.7.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
+    "yarn": "^1.22.19",
     "yup": "^0.32.11"
   },
   "scripts": {
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
